aframe extras https

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <!-- <script src="build/aframe-ar.js"></script> -->
 
     <!-- to load .gltf model -->
-    <script src="http://cdn.rawgit.com/donmccurdy/aframe-extras/v3.10.0/dist/aframe-extras.min.js"></script>
+    <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v3.10.0/dist/aframe-extras.min.js"></script>
     <!-- orbit controls -->
         <script src="https://cdn.rawgit.com/tizzle/aframe-orbit-controls-component/v0.1.6/dist/aframe-orbit-controls-component.min.js"></script>
         <!-- mouse cursor click-->
