--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
 
       <body onload="initElement();">
 
-        <a-scene vr-mode-ui="false">
+        <a-scene embedded vr-mode-ui="enabled: false">
 
           <a-entity id="camera"
               camera="fov: 80; zoom: 1;"
@@ -77,19 +77,45 @@
       <a-entity id="model" scale="1 1 1">
 
     		<!-- <a-entity gltf-model-next="src: url(models/scene.gltf);" position='0 0 0' rotation='0 90 0' scale='20 20 20'></a-entity> -->
-    		<a-entity id="sculpture1" gltf-model-next="models/tiberius/scene.gltf" position="-1.111 -0.829 1.193" rotation="-14.954198452914486 0 0"></a-entity>
+    		<a-entity id="sculpture1" gltf-model-next="models/rodin/scene.gltf" position="0 -5.365 2.012" rotation="-14.954 0 0" scale="0.5 0.5 0.5"></a-entity>
     		<a-entity id="sculpture2" visible="false" gltf-model-next="models/dauguste/scene.gltf" position="0.239 -0.346 -1.049" rotation="-2.4637185190625397 41.08107391088002 -6.64631042351755" scale="0.012 0.012 0.012"></a-entity>
       </a-entity>
 
 
           <a-sky
-                 color="black">
+                 color="red">
           </a-sky>
 
         </a-scene>
 
     		<button id="button1" cursor-listener-1 type="button">Sculpture 1</button>
     		<button id="button2" cursor-listener-1 type="button">Sculpture 2</button>
+
+        <div class="info" id="info1">
+<p>
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer aliquam, sapien sit amet rutrum porta, sapien purus pretium sem, vel convallis odio ligula ut massa. Sed interdum luctus mauris, at suscipit tortor pharetra in. Mauris luctus neque ac sollicitudin vestibulum. In pulvinar sapien vel viverra suscipit. Quisque faucibus massa ex, quis pharetra ligula viverra ac. Fusce scelerisque turpis vel sem tristique, a imperdiet sapien cursus. Vestibulum eu placerat lacus. Nullam dui lectus, mollis non mattis non, imperdiet at ex. Nam volutpat, nibh eget consequat lobortis, lorem sapien molestie augue, eu efficitur justo velit quis nisi. Vivamus ornare est tempor eros laoreet, quis feugiat neque varius. Quisque sagittis dignissim magna id hendrerit. Nunc lorem diam, varius at arcu sit amet, vulputate placerat arcu. Sed quis facilisis erat. Duis eu leo vel augue imperdiet gravida ut id sapien.
+
+Vestibulum accumsan eros quis eros laoreet finibus. Fusce sed fringilla erat, sed efficitur dui. Nullam velit elit, vulputate non blandit pharetra, tincidunt tempor ipsum. Aenean suscipit diam eget dolor aliquet rhoncus. Maecenas rutrum vel risus in egestas. Sed tempor dignissim mauris quis egestas. Integer non feugiat sem. Aliquam erat volutpat. Nunc ultrices ultrices felis, eget scelerisque est facilisis eu.
+
+Duis tincidunt augue et laoreet consectetur. Duis rhoncus, nunc in dignissim pharetra, odio dui auctor elit, et pellentesque nisl nunc et arcu. Nunc id aliquet tellus, vel suscipit magna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent facilisis nibh eget orci placerat interdum. Morbi vitae odio dignissim odio interdum pellentesque. Donec non egestas orci. Morbi mauris tellus, lobortis sit amet est sed, sollicitudin lacinia nibh.
+
+Cras mollis risus consequat diam laoreet convallis. Phasellus ut dapibus turpis. Maecenas porttitor egestas tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Etiam vel facilisis mi. Quisque sit amet vehicula tortor. Sed ac erat in tortor lobortis eleifend.
+
+Sed ut sapien hendrerit, aliquam diam eget, rhoncus felis. Cras ac lacus vehicula risus eleifend sodales vel nec orci. Nunc dapibus mauris non risus imperdiet, nec tristique odio condimentum. Duis lobortis mi a pretium vestibulum. Nulla tristique sem quis metus commodo, id eleifend velit semper. Quisque volutpat tellus eros, in venenatis odio pellentesque vitae. Pellentesque eu lorem nec lorem varius imperdiet. Etiam vel dolor quis sem lacinia finibus. Nulla facilisi. Proin vulputate nunc sed ex iaculis, sit amet ultrices eros ultrices.
+</p>
+        </div>
+        <div class="info" id="info2">
+<p>
+
+Vestibulum accumsan eros quis eros laoreet finibus. Fusce sed fringilla erat, sed efficitur dui. Nullam velit elit, vulputate non blandit pharetra, tincidunt tempor ipsum. Aenean suscipit diam eget dolor aliquet rhoncus. Maecenas rutrum vel risus in egestas. Sed tempor dignissim mauris quis egestas. Integer non feugiat sem. Aliquam erat volutpat. Nunc ultrices ultrices felis, eget scelerisque est facilisis eu.
+
+Duis tincidunt augue et laoreet consectetur. Duis rhoncus, nunc in dignissim pharetra, odio dui auctor elit, et pellentesque nisl nunc et arcu. Nunc id aliquet tellus, vel suscipit magna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent facilisis nibh eget orci placerat interdum. Morbi vitae odio dignissim odio interdum pellentesque. Donec non egestas orci. Morbi mauris tellus, lobortis sit amet est sed, sollicitudin lacinia nibh.
+
+Cras mollis risus consequat diam laoreet convallis. Phasellus ut dapibus turpis. Maecenas porttitor egestas tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Etiam vel facilisis mi. Quisque sit amet vehicula tortor. Sed ac erat in tortor lobortis eleifend.
+
+Sed ut sapien hendrerit, aliquam diam eget, rhoncus felis. Cras ac lacus vehicula risus eleifend sodales vel nec orci. Nunc dapibus mauris non risus imperdiet, nec tristique odio condimentum. Duis lobortis mi a pretium vestibulum. Nulla tristique sem quis metus commodo, id eleifend velit semper. Quisque volutpat tellus eros, in venenatis odio pellentesque vitae. Pellentesque eu lorem nec lorem varius imperdiet. Etiam vel dolor quis sem lacinia finibus. Nulla facilisi. Proin vulputate nunc sed ex iaculis, sit amet ultrices eros ultrices.
+</p>
+        </div>
     <!-- <div id="mario-chat">
       <div id="chat-window">
         <div id="output">
