--- a/public/index.html
+++ b/public/index.html
@@ -72,18 +72,18 @@
     			<a-entity light="" position="6.055 2.524 6.279"></a-entity>
     			<a-entity light="" position="-0.129 2.524 -8.146"></a-entity>
 
-
+<!-- <a-entity id="sculpture2" gltf-model-next="models/lion/scene.gltf" position="0.239 -4.676 -1.049" rotation="-85.02693679741417 26.241467016991706 40.22163721818379" scale="0.216 0.216 0.216"></a-entity> -->
 
       <a-entity id="model" scale="1 1 1">
 
     		<!-- <a-entity gltf-model-next="src: url(models/scene.gltf);" position='0 0 0' rotation='0 90 0' scale='20 20 20'></a-entity> -->
     		<a-entity id="sculpture1" gltf-model-next="models/rodin/scene.gltf" position="0 -5.365 2.012" rotation="-14.954 0 0" scale="0.5 0.5 0.5"></a-entity>
-    		<a-entity id="sculpture2" visible="false" gltf-model-next="models/dauguste/scene.gltf" position="0.239 -0.346 -1.049" rotation="-2.4637185190625397 41.08107391088002 -6.64631042351755" scale="0.012 0.012 0.012"></a-entity>
+        <a-entity id="sculpture2" visible="false" gltf-model-next="models/lion/scene.gltf" position="0.239 -10.036 -1.049" rotation="-85.02693679741417 -113.73212233346841 40.22163721818379" scale="0.439 0.439 0.439"></a-entity>
       </a-entity>
 
 
           <a-sky
-                 color="red">
+                 color="black">
           </a-sky>
 
         </a-scene>
@@ -92,29 +92,38 @@
     		<button id="button2" cursor-listener-1 type="button">Sculpture 2</button>
 
         <div class="info" id="info1">
-<p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer aliquam, sapien sit amet rutrum porta, sapien purus pretium sem, vel convallis odio ligula ut massa. Sed interdum luctus mauris, at suscipit tortor pharetra in. Mauris luctus neque ac sollicitudin vestibulum. In pulvinar sapien vel viverra suscipit. Quisque faucibus massa ex, quis pharetra ligula viverra ac. Fusce scelerisque turpis vel sem tristique, a imperdiet sapien cursus. Vestibulum eu placerat lacus. Nullam dui lectus, mollis non mattis non, imperdiet at ex. Nam volutpat, nibh eget consequat lobortis, lorem sapien molestie augue, eu efficitur justo velit quis nisi. Vivamus ornare est tempor eros laoreet, quis feugiat neque varius. Quisque sagittis dignissim magna id hendrerit. Nunc lorem diam, varius at arcu sit amet, vulputate placerat arcu. Sed quis facilisis erat. Duis eu leo vel augue imperdiet gravida ut id sapien.
-
-Vestibulum accumsan eros quis eros laoreet finibus. Fusce sed fringilla erat, sed efficitur dui. Nullam velit elit, vulputate non blandit pharetra, tincidunt tempor ipsum. Aenean suscipit diam eget dolor aliquet rhoncus. Maecenas rutrum vel risus in egestas. Sed tempor dignissim mauris quis egestas. Integer non feugiat sem. Aliquam erat volutpat. Nunc ultrices ultrices felis, eget scelerisque est facilisis eu.
-
-Duis tincidunt augue et laoreet consectetur. Duis rhoncus, nunc in dignissim pharetra, odio dui auctor elit, et pellentesque nisl nunc et arcu. Nunc id aliquet tellus, vel suscipit magna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent facilisis nibh eget orci placerat interdum. Morbi vitae odio dignissim odio interdum pellentesque. Donec non egestas orci. Morbi mauris tellus, lobortis sit amet est sed, sollicitudin lacinia nibh.
-
-Cras mollis risus consequat diam laoreet convallis. Phasellus ut dapibus turpis. Maecenas porttitor egestas tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Etiam vel facilisis mi. Quisque sit amet vehicula tortor. Sed ac erat in tortor lobortis eleifend.
-
-Sed ut sapien hendrerit, aliquam diam eget, rhoncus felis. Cras ac lacus vehicula risus eleifend sodales vel nec orci. Nunc dapibus mauris non risus imperdiet, nec tristique odio condimentum. Duis lobortis mi a pretium vestibulum. Nulla tristique sem quis metus commodo, id eleifend velit semper. Quisque volutpat tellus eros, in venenatis odio pellentesque vitae. Pellentesque eu lorem nec lorem varius imperdiet. Etiam vel dolor quis sem lacinia finibus. Nulla facilisi. Proin vulputate nunc sed ex iaculis, sit amet ultrices eros ultrices.
-</p>
+          <h1>Les Bourgeois de Calais</h1>
+          <h5>Year: 1884–9</h5>
+          <h3>Artist: Auguste Rodin</h3>
+          <h5 style="font-style: italic;">From Wikipedia, the free encyclopedia</h5>
+          <p>
+            Les Bourgeois de Calais is one of the most famous sculptures by Auguste Rodin. It commemorates an occurrence during the Hundred Years' War, when Calais, an important French port on the English Channel, was under siege by the English for over a year. Calais commissioned Rodin to create the sculpture in 1884, and the work was completed in 1889.
+          </p>
+          <h3>History</h3>
+                        <p>
+                          England's Edward III, after a victory in the Battle of Crécy, laid siege to Calais, while Philip VI of France ordered the city to hold out at all costs. Philip failed to lift the siege, and starvation eventually forced the city to parley for surrender.<br>
+              According to medieval writer Jean Froissart, Edward offered to spare the people of the city if six of its top leaders would surrender themselves to him, presumably to be executed. Edward demanded that they walk out wearing nooses around their necks, and carrying the keys to the city and castle. One of the wealthiest of the town leaders, Eustache de Saint Pierre, volunteered first, and five other burghers joined with him.[2] Saint Pierre led this envoy of volunteers to the city gates. It was this moment, and this poignant mix of defeat, heroic self-sacrifice, and willingness to face imminent death that Rodin captured in his sculpture, scaled somewhat larger than life.<br>
+              Although the burghers expected to be executed, their lives were spared by the intervention of England's queen, Philippa of Hainault, who persuaded her husband to exercise mercy by claiming that their deaths would be a bad omen for her unborn child. (Her son, Thomas of Windsor, only lived for one year.)
+                        </p>
         </div>
         <div class="info" id="info2">
-<p>
-
-Vestibulum accumsan eros quis eros laoreet finibus. Fusce sed fringilla erat, sed efficitur dui. Nullam velit elit, vulputate non blandit pharetra, tincidunt tempor ipsum. Aenean suscipit diam eget dolor aliquet rhoncus. Maecenas rutrum vel risus in egestas. Sed tempor dignissim mauris quis egestas. Integer non feugiat sem. Aliquam erat volutpat. Nunc ultrices ultrices felis, eget scelerisque est facilisis eu.
-
-Duis tincidunt augue et laoreet consectetur. Duis rhoncus, nunc in dignissim pharetra, odio dui auctor elit, et pellentesque nisl nunc et arcu. Nunc id aliquet tellus, vel suscipit magna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent facilisis nibh eget orci placerat interdum. Morbi vitae odio dignissim odio interdum pellentesque. Donec non egestas orci. Morbi mauris tellus, lobortis sit amet est sed, sollicitudin lacinia nibh.
-
-Cras mollis risus consequat diam laoreet convallis. Phasellus ut dapibus turpis. Maecenas porttitor egestas tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Etiam vel facilisis mi. Quisque sit amet vehicula tortor. Sed ac erat in tortor lobortis eleifend.
-
-Sed ut sapien hendrerit, aliquam diam eget, rhoncus felis. Cras ac lacus vehicula risus eleifend sodales vel nec orci. Nunc dapibus mauris non risus imperdiet, nec tristique odio condimentum. Duis lobortis mi a pretium vestibulum. Nulla tristique sem quis metus commodo, id eleifend velit semper. Quisque volutpat tellus eros, in venenatis odio pellentesque vitae. Pellentesque eu lorem nec lorem varius imperdiet. Etiam vel dolor quis sem lacinia finibus. Nulla facilisi. Proin vulputate nunc sed ex iaculis, sit amet ultrices eros ultrices.
-</p>
+          <h1>Lion Crushing a Serpent</h1>
+          <h5>Year: 1832, cast 1891; installed 1892</h5>
+          <h3>Artist: Antoine-Louis Barye</h3>
+          <h5 style="font-style: italic;">From Wikipedia, the free encyclopedia</h5>
+          <p>
+            Les Bourgeois de Calais is one of the most famous sculptures by Auguste Rodin. It commemorates an occurrence during the Hundred Years' War, when Calais, an important French port on the English Channel, was under siege by the English for over a year. Calais commissioned Rodin to create the sculpture in 1884, and the work was completed in 1889.
+          </p>
+          <h3>History</h3>
+                        <p>
+                          Although his contemporaries criticized his style and his choice of animal subjects, Barye is today esteemed as the founder of the Parisian animaliers.
+<br>
+He worked at a time of widespread public hope that the ruling government could be made liberal and responsive to its citizens. His choice of bronze over marble and his use of animals as symbols for human emotions were both considered radical.
+<br>
+The political symbolism of the lion of monarchy crushing the evil serpent was applauded by Louis Philippe, who made Barye a knight of the Legion of Honor in 1833. Later Barye was appointed professor of zoological drawing at the Museum of Natural History, where Auguste Rodin studied with him.
+<br>
+F. Barbedienne, whose foundry cast the Lion, interested Thomas Hockley, chairman of the Fairmount Park Art Association’s (now the Association for Public Art) Committee of Works of Art, in the sculpture. Hockley circulated subscription books in 1885, and six years later payment was made for a cast of the work, which was the first sculpture installed in Rittenhouse Square.
+                        </p>
         </div>
     <!-- <div id="mario-chat">
       <div id="chat-window">
