--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <title>SculpExhibit</title>
+    <title>Sculpture Viewer</title>
     <script src=https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js></script>
     <!-- include aframe -->
     <!-- include aframe -->
@@ -88,8 +89,14 @@
 
         </a-scene>
 
+        <div id="buttons">
+
+
+
     		<button id="button1" cursor-listener-1 type="button">Sculpture 1</button>
     		<button id="button2" cursor-listener-1 type="button">Sculpture 2</button>
+
+        </div>
 
         <div class="info" id="info1">
           <h1>Les Bourgeois de Calais</h1>
@@ -110,10 +117,7 @@
           <h1>Lion Crushing a Serpent</h1>
           <h5>Year: 1832, cast 1891; installed 1892</h5>
           <h3>Artist: Antoine-Louis Barye</h3>
-          <h5 style="font-style: italic;">From Wikipedia, the free encyclopedia</h5>
-          <p>
-            Les Bourgeois de Calais is one of the most famous sculptures by Auguste Rodin. It commemorates an occurrence during the Hundred Years' War, when Calais, an important French port on the English Channel, was under siege by the English for over a year. Calais commissioned Rodin to create the sculpture in 1884, and the work was completed in 1889.
-          </p>
+          <h5 style="font-style: italic;">Adapted from Public Art in Philadelphia by Penny Balkin Bach</h5>
           <h3>History</h3>
                         <p>
                           Although his contemporaries criticized his style and his choice of animal subjects, Barye is today esteemed as the founder of the Parisian animaliers.
