added start screen and removed models

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,14 @@
 
       <body onload="initElement();">
 
+        <div id="startscreen">
+          <div id="starttext">
+            <h1>Class Sculpture Viewer</h1>
+            <p>This viewer is synced with anyone at the same URL</p>
+            <h3>CLICK ANYWHERE TO START</h3>
+          </div>
+        </div>
+
         <a-scene embedded vr-mode-ui="enabled: false">
 
           <a-entity id="camera"
